--- a/src/pug/includes/portfolio-modal-3.pug
+++ b/src/pug/includes/portfolio-modal-3.pug
@@ -17,7 +17,7 @@
                                     i.fas.fa-star
                                 .divider-custom-line
                             // Portfolio Modal - Image
-                            img.img-fluid.rounded.mb-5(src='assets/img/product/photo-frame.jpg', alt='...')
+                            img.img-fluid.rounded.mb-5(src='assets/img/product/photo-frame.webp', alt='...')
                             // Portfolio Modal - Text
                             p.mb-4
                                 | ✨相框🖼️客製化禮物🎁
