--- a/src/pug/includes/portfolio-modal-5.pug
+++ b/src/pug/includes/portfolio-modal-5.pug
@@ -17,7 +17,7 @@
                                     i.fas.fa-star
                                 .divider-custom-line
                             // Portfolio Modal - Image
-                            img.img-fluid.rounded.mb-5(src='assets/img//product/acrylic.jpg', alt='...')
+                            img.img-fluid.rounded.mb-5(src='assets/img//product/acrylic.webp', alt='...')
                             // Portfolio Modal - Text
                             p.mb-4
                                 | ✨透明壓克力板🪞客製化禮物🎁
