--- a/src/pug/includes/portfolio-modal-6.pug
+++ b/src/pug/includes/portfolio-modal-6.pug
@@ -17,7 +17,7 @@
                                     i.fas.fa-star
                                 .divider-custom-line
                             // Portfolio Modal - Image
-                            img.img-fluid.rounded.mb-5(src='assets/img/product/creation.jpg', alt='...')
+                            img.img-fluid.rounded.mb-5(src='assets/img/product/creation.webp', alt='...')
                             // Portfolio Modal - Text
                             p.mb-4
                                 | 👩🏻‍🎨似顏繪.客製化商品.情侶👩🏻‍❤️‍👨🏻閨蜜👭🏻全家福👨‍👩‍👧紀念禮物🎁
