--- a/src/pug/includes/portfolio-modal-2.pug
+++ b/src/pug/includes/portfolio-modal-2.pug
@@ -17,7 +17,7 @@
                                     i.fas.fa-star
                                 .divider-custom-line
                             // Portfolio Modal - Image
-                            img.img-fluid.rounded.mb-5(src='assets/img/product/frameless.jpg', alt='...')
+                            img.img-fluid.rounded.mb-5(src='assets/img/product/frameless.webp', alt='...')
                             // Portfolio Modal - Text
                             p.mb-4
                                 | ✨無框畫🖼️客製化禮物🎁
