--- a/src/pug/includes/portfolio-modal-4.pug
+++ b/src/pug/includes/portfolio-modal-4.pug
@@ -17,7 +17,7 @@
                                     i.fas.fa-star
                                 .divider-custom-line
                             // Portfolio Modal - Image
-                            img.img-fluid.rounded.mb-5(src='assets/img/product/canvas-bag.jpg', alt='...')
+                            img.img-fluid.rounded.mb-5(src='assets/img/product/canvas-bag.webp', alt='...')
                             // Portfolio Modal - Text
                             p.mb-4
                                 | ✨飲料杯套🥤帆布袋👜客製化禮物🎁
