--- a/src/pug/index.pug
+++ b/src/pug/index.pug
@@ -65,7 +65,7 @@ html(lang='zh-hant')
         header.masthead.bg-primary.text-white.text-center
             .container.d-flex.align-items-center.flex-column
                 // Masthead Avatar Image
-                img.masthead-avatar.mb-6(src='assets/img/avataaars.webp', alt='太咪畫畫中', style="min-height: 288px;")
+                img.masthead-avatar.mb-6(src='assets/img/avataaars.webp', alt='太咪畫畫中')
                 // Masthead Heading
                 br
                 br
