--- a/src/pug/index.pug
+++ b/src/pug/index.pug
@@ -2,15 +2,14 @@ doctype html
 html(lang='zh-hant')
 
     head
-
         meta(charset='utf-8')
         meta(name='viewport', content='width=device-width, initial-scale=1, shrink-to-fit=no')
         meta(name='description', content='Hello👋🏻 我是太咪👩🏻‍🎨, 分享我的畫畫大小事🎨, 有任何想找太咪畫的歡迎私訊 IG 小盒子🤗')
-        meta(name='keywords', content='似顏繪,客製化似顏繪,禮物,紀念禮物,太咪畫畫中,太咪,畫畫中')
+        meta(name='keywords', content='我是太咪,似顏繪,客製化似顏繪,禮物,紀念禮物,太咪畫畫中,太咪,畫畫中')
         meta(name='author', content='太咪畫畫中')
 
         meta(property="og:title", content="太咪畫畫中")
-        meta(property="og:description", content="Hello👋🏻 我是太咪👩🏻‍🎨, 分享我的畫畫大小事🎨, 有任何想找太咪畫的歡迎私訊 IG 小盒子🤗")
+        meta(property="og:description", content="太咪畫畫中, Hello👋🏻 我是太咪👩🏻‍🎨, 分享我的畫畫大小事🎨, 有任何想找太咪畫的歡迎私訊 IG 小盒子🤗")
         meta(property="og:type", content="website")
         meta(property="og:image", content="assets/img/product/frameless.jpg")
 
@@ -19,6 +18,7 @@ html(lang='zh-hant')
 
         title 太咪畫畫中 | 無臉似顏繪創作
 
+        link(rel="alternate", hreflang="zh-TW")
         // Favicon
         link(rel='icon', type='image/x-icon', href='assets/favicon.ico')
 
